fix missing padding for skills section in resume

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -60,7 +60,9 @@ nav
 main
   margin: 0 auto
 
-main > p, main > div.footnote-definition
+main > p,
+main > div.footnote-definition,
+main > .pipgrid
   padding: 0 .5rem
 
 h1, h2, h3, h4, h5, h6
